Partially fix buggy sneaking code